Closed Bug 1288825 Opened 8 years ago Closed 8 years ago

toolkit/components/url-classifier/nsUrlClassifierUtils.cpp:94:4: error: Unrecognized platform type.

Categories

(Toolkit :: Safe Browsing, defect, P2)

Unspecified
FreeBSD
defect

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
firefox50 --- fixed

People

(Reporter: jbeich, Assigned: jbeich)

References

Details

(Whiteboard: [npotb])

Attachments

(1 file)

Bug 1275507 broke build on Tier3 Unix-like systems: BSD (DragonFly, FreeBSD, NetBSD, OpenBSD), Solaris (Illumos, SmartOS, etc). Since many of those can emulate Linux ABI it may make sense to fake LINUX_PLATFORM. However, a similar case can be made against Wine being able to run some Windows malware.

$ ./mach build
[...]
In file included from objdir/toolkit/components/url-classifier/Unified_cpp_url-classifier0.cpp:65:
toolkit/components/url-classifier/nsUrlClassifierUtils.cpp:94:4: error: Unrecognized platform type.
  #error Unrecognized platform type.
   ^
1 error generated.

http://buildbot.rhaalovely.net/builders/mozilla-central-freebsd-amd64/builds/907/steps/build/logs/stdio
http://buildbot.rhaalovely.net/builders/mozilla-central-amd64/builds/1798/steps/build/logs/stdio
Attachment #8773926 - Flags: review?(hchang)
Assignee: nobody → jbeich
Status: NEW → ASSIGNED
Priority: -- → P2
Whiteboard: [npotb]
Comment on attachment 8773926 [details]
Bug 1288825 - Unbreak build on Unix after bug 1275507.

Review request updated; see interdiff: https://reviewboard.mozilla.org/r/66560/diff/1-2/
Attachment #8773926 - Attachment description: Bug 1288825 - Fall back to Linux on other Unices. → Bug 1288825 - Unbreak build on Unix after bug 1275507.
Attachment #8773926 - Flags: review- → review?(hchang)
Attachment #8773926 - Flags: review?(hchang)
Sorry it's my fault :( 

Thanks Jan for fixing this and Francois doing the review!
https://hg.mozilla.org/mozilla-central/rev/bda9fd505371
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
(In reply to François Marier [:francois] from comment #2)
> I'd rather have non-Linux platforms return PLATFORM_TYPE_UNSPECIFIED instead:

Hmm, http://testsafebrowsing.appspot.com/s/phishing.html matches SOCIAL_ENGINEERING for any threatType *except* PLATFORM_TYPE_UNSPECIFIED. Reminds me of Google Maps where BSD users are forced to Lite mode even with working WebGL.
See Also: → 1362501
(In reply to Jan Beich from comment #8)
> (In reply to François Marier [:francois] from comment #2)
> > I'd rather have non-Linux platforms return PLATFORM_TYPE_UNSPECIFIED instead:
> 
> Hmm, http://testsafebrowsing.appspot.com/s/phishing.html matches
> SOCIAL_ENGINEERING for any threatType *except* PLATFORM_TYPE_UNSPECIFIED.

I filed bug 1362501 for this issue.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: