Bug 1288825 - Unbreak build on Unix after bug 1275507. r=francois

MozReview-Commit-ID: nYNiYjuq8A

--HG--
extra : rebase_source : 2f433895b15920263fbfa5c4b2a30f4097434d07