toolkit/components/url-classifier/nsUrlClassifierUtils.cpp
@@ -91,7 +91,7 @@ GetPlatformType()
 #elif defined(XP_WIN)
   return WINDOWS_PLATFORM;
 #else
-  #error Unrecognized platform type.
+  return PLATFORM_TYPE_UNSPECIFIED;
 #endif
 }
 
